--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -1,5 +1,5 @@
 
-name: TOOLBOXLAP
+name: rdpPeter
 
 on:
   workflow_dispatch:
@@ -22,9 +22,9 @@ jobs:
       run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
     - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
     - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "admin@123" -Force)
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "A@sd102030" -Force)
 
-    - name: www.toolboxlap.xyz
+    - name: rdpPeter
       env:
         PLAYIT_AUTH_KEY: ${{ secrets.PL }} 
       run: |
